--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="Portfolio Lucas Iocco">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="En mi portfolio personal podras ver mis habilidades como developer y todos los trabajos que realice hasta la fecha."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
