--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/img/laptopWave.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Portfolio Lucas Iocco">
-    <meta
-      name="description"
-      content="En mi portfolio personal podras ver mis habilidades como developer y todos los trabajos que realice hasta la fecha."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:title" content="Portfolio de Lucas Iocco" />
+    <meta property="og:description" content="Descubre las habilidades de Lucas Iocco como desarrollador y explora sus proyectos." />
+    <meta property="og:url" content="https://lucasiocco.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lucasiocco.netlify.app/public/img/laptopWave.png" />
+    <meta name="keywords" content="portfolio, desarrollador, Lucas Iocco, proyectos, habilidades" />
+    <title>Portfolio de Lucas Iocco - Desarrollador Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Lucas Nahuel Iocco</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
