Se modifico og:image

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Portfolio de Lucas Iocco" />
-    <meta property="og:description" content="Descubre las habilidades de Lucas Iocco como desarrollador y explora sus proyectos." />
+    <meta property="og:description" content="Descubre mis habilidades y proyectos." />
     <meta property="og:url" content="https://lucasiocco.netlify.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lucasiocco.netlify.app/public/img/laptopWave.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/laptopWave.png" />
     <meta name="keywords" content="portfolio, desarrollador, Lucas Iocco, proyectos, habilidades" />
     <title>Portfolio de Lucas Iocco - Desarrollador Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
