Se soluciono problema con og:description

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Descubre mis habilidades y proyectos." />
     <meta property="og:url" content="https://lucasiocco.netlify.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="%PUBLIC_URL%/img/laptopWave.png" />
+    <meta property="og:image" content="https://lucasiocco.netlify.app/img/laptopWave.png" />
     <meta name="keywords" content="portfolio, desarrollador, Lucas Iocco, proyectos, habilidades" />
     <title>Portfolio de Lucas Iocco - Desarrollador Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
